testdata/baselines/reference/submodule/conformance/instanceofOperatorWithInvalidOperands.es2015.errors.txt
instanceofOperatorWithInvalidOperands.es2015.ts(14,11): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
instanceofOperatorWithInvalidOperands.es2015.ts(15,11): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
instanceofOperatorWithInvalidOperands.es2015.ts(16,11): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
instanceofOperatorWithInvalidOperands.es2015.ts(17,11): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
instanceofOperatorWithInvalidOperands.es2015.ts(18,11): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
instanceofOperatorWithInvalidOperands.es2015.ts(19,11): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
instanceofOperatorWithInvalidOperands.es2015.ts(20,11): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
instanceofOperatorWithInvalidOperands.es2015.ts(21,11): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
instanceofOperatorWithInvalidOperands.es2015.ts(22,11): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
instanceofOperatorWithInvalidOperands.es2015.ts(46,11): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.


==== instanceofOperatorWithInvalidOperands.es2015.ts (10 errors) ====
    class C {
        foo() { }
    }
    
    var x: any;
    
    // invalid left operand
    // the left operand is required to be of type Any, an object type, or a type parameter type
    var a1: number;
    var a2: boolean;
    var a3: string;
    var a4: void;
    
    var ra1 = a1 instanceof x;
              ~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    var ra2 = a2 instanceof x;
              ~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    var ra3 = a3 instanceof x;
              ~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    var ra4 = a4 instanceof x;
              ~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    var ra5 = 0 instanceof x;
              ~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    var ra6 = true instanceof x;
              ~~~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    var ra7 = '' instanceof x;
              ~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    var ra8 = null instanceof x;
              ~~~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    var ra9 = undefined instanceof x;
              ~~~~~~~~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    
    // invalid right operand
    // the right operand to be of type Any or a subtype of the 'Function' interface type
    var b1: number;
    var b2: boolean;
    var b3: string;
    var b4: void;
    var o1: {};
    var o2: Object;
    var o3: C;
    
    var rb1 = x instanceof b1;
    var rb2 = x instanceof b2;
    var rb3 = x instanceof b3;
    var rb4 = x instanceof b4;
    var rb5 = x instanceof 0;
    var rb6 = x instanceof true;
    var rb7 = x instanceof '';
    var rb8 = x instanceof o1;
    var rb9 = x instanceof o2;
    var rb10 = x instanceof o3;
    
    // both operands are invalid
    var rc1 = '' instanceof {};
              ~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    
    // @@hasInstance restricts LHS
    var o4: {[Symbol.hasInstance](value: { x: number }): boolean;};
    var o5: { y: string };
    var ra10 = o5 instanceof o4;
    
    // invalid @@hasInstance method return type on RHS
    var o6: {[Symbol.hasInstance](value: unknown): number;};
    var rb11 = x instanceof o6;